2002-10-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* Makefile.am (EXTRA_DIST_CONF): distribute nfs_prot_aix5_2.h.

	* conf/nfs_prot/nfs_prot_aix5_2.h: new file.

	* aux/macros/struct_nfs_args.m4 (ac_cv_have_struct_nfs_args): look
	for "struct aux52_nfs_args".

	* aux/macros/check_nfs_prot_headers.m4: define new header file for
	AIX 5.2.

2002-10-21  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* scripts/amd.conf.5 (ldap_proto_version): document in amd.conf
	man page.

	* scripts/amd.conf-sample (ldap_proto_version): show example of use

	* doc/am-utils.texi (ldap_proto_version Parameter): document new
	amd.conf option.

	* amd/conf.c (gopt_ldap_proto_version): new conf function to
	support ldap_proto_version amd.conf parameter.

	* amd/amd.h: field to hold LDAP protocol version.

	* amd/amd.c (init_global_options): set default for
	ldap_proto_version.  ldap_proto_version patch from George Ross
	<gdmr@dcs.ed.ac.uk> and Tim Colles <timc@inf.ed.ac.uk>.

	* amd/info_ldap.c (amu_ldap_unbind): ignore SIGPIPE errors while
	unbinding from an LDAP server that may have been restarted.  Fix
	from George Ross <gdmr@dcs.ed.ac.uk>.

2002-09-17  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* remove all autoconf stuff added for sys_nerr

	* amq/amq.c, libamu/xutil.c, hlfsd/hlfsd.c: always use strerror

	* libamu/strerror.c: more explicit text for unknown errno's

2002-10-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* include/am_defs.h: define "extern int sys_err" if needed.

	* aux/macros/header_templates.m4: template for
	HAVE_EXTERN_SYS_NERR.

	* hlfsd/hlfsd.h, libamu/xutil.c (expand_error), amq/amq.c
	(show_mi): remove "extern int sys_err"

	* configure.in: execute test for "extern int sys_err"

	* Makefile.am (EXTRA_DIST_AUX): distribute new extern_sys_err.m4 file.

	* aux/macros/extern_sys_nerr.m4: new test to check for existence
	of "extern int sys_nerr" definition in system headers.

2002-09-17  Ion Badulescu  <ion@guppy.limebrokerage.com>
